--- a/Trabajos Practicos/Tp 6/ISW-G11-2023-Tp-6.md
+++ b/Trabajos Practicos/Tp 6/ISW-G11-2023-Tp-6.md
@@ -1,9 +1,12 @@
-Documento de estilo de codigo
-Los archivos de configuración se encuentran bajo el directorio https://github.com/82440-Villarruel-Juan-Cruz/ISW-G11-2023/tree/main/Trabajos%20Practicos/Tp%206/ISW-G11-2023-Tp-6/
-Los archivos multimedia como imagenes se almacenan en el directorio https://github.com/82440-Villarruel-Juan-Cruz/ISW-G11-2023/tree/main/Trabajos%20Practicos/Tp%206/ISW-G11-2023-Tp-6/src/assets/
-Los archivos de código deben estar bajo el directorio src https://github.com/82440-Villarruel-Juan-Cruz/ISW-G11-2023/tree/main/Trabajos%20Practicos/Tp%206/ISW-G11-2023-Tp-6/src/
-En cuanto a guias de estilo de desarrollo y buenas prácticas se recomienda seguir lo propuesto en los siguientes recursos:
-https://google.github.io/styleguide/tsguide.html
-https://docs.aws.amazon.com/prescriptive-guidance/latest/best-practices-cdk-typescript-iac/typescript-best-practices.html
-https://www.w3schools.com/html/html5_syntax.asp
-https://google.github.io/styleguide/htmlcssguide.html
+# Documento de estilo de codigo
+## Los archivos de configuración se encuentran bajo el directorio 
+- https://github.com/82440-Villarruel-Juan-Cruz/ISW-G11-2023/tree/main/Trabajos%20Practicos/Tp%206/ISW-G11-2023-Tp-6/
+## Los archivos multimedia como imagenes se almacenan en el directorio 
+- https://github.com/82440-Villarruel-Juan-Cruz/ISW-G11-2023/tree/main/Trabajos%20Practicos/Tp%206/ISW-G11-2023-Tp-6/src/assets/
+## Los archivos de código deben estar bajo el directorio src 
+- https://github.com/82440-Villarruel-Juan-Cruz/ISW-G11-2023/tree/main/Trabajos%20Practicos/Tp%206/ISW-G11-2023-Tp-6/src/
+## En cuanto a guias de estilo de desarrollo y buenas prácticas se recomienda seguir lo propuesto en los siguientes recursos:
+- https://google.github.io/styleguide/tsguide.html
+- https://docs.aws.amazon.com/prescriptive-guidance/latest/best-practices-cdk-typescript-iac/typescript-best-practices.html
+- https://www.w3schools.com/html/html5_syntax.asp
+- https://google.github.io/styleguide/htmlcssguide.html
